Bug 98852 - Problems with Custom Animation "Emphasis: Change Font Color"
Summary: Problems with Custom Animation "Emphasis: Change Font Color"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.1.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-23 23:03 UTC by David
Modified: 2016-10-25 19:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2016-03-23 23:03:29 UTC
Adding effect of custom animation fails. Display of "Emphasis: Change Font Colour" does not display. It will display on Libreoffice 5.03, however.
Comment 1 Regina Henschel 2016-03-24 14:50:58 UTC
It does not work in Version: 5.1.0.1.0+
Build ID: 51a1b41ab4a840544e5454d1d4234b443edd5466
Threads 4; Ver: Windows 6.1; Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-1, Time: 2015-12-17_11:44:49
Locale: de-DE (de_DE)

In Version: 5.2.0.0.alpha0+
Build ID: ac488ccba124fc2539f765d354a0b97c9b843f51
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-03-22_04:19:21
Locale: de-DE (de_DE)
the effect works again, when you load an existing presentation, but the effect is not listed in the custom animation lists.
Comment 2 Commit Notification 2016-05-20 10:03:34 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b5245993c0450b49607a352b642a1cc97031c29e

tdf#98852: Show text-specific effects when selection contains text

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.