tdf#98852: Show text-specific effects when selection contains text

This regressed as effect list(s) moved to sidebar, text-specific
effects were simply always skipped even if it'd be relevant to
offer them in the given context

Change-Id: I2dc9cd360b462fb232573434da743e517661a6b8